--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,7 @@
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet"
     />
+    <script src="https://cdn.tailwindcss.com"></script>
 
     <!-- Compiled and minified Materialize JS/CSS -->
     <link
